<resources>
    <string name="app_name">Quoteinator</string>
    <string name="open_drawer">Navigationsleiste öffnen</string>
    <string name="close_drawer">Navigationsleiste schließen</string>
    <string name="action_settings">Einstellungen</string>

    <string-array name="titles">
        <item>Start</item>
        <item>Zitate</item>
        <item>Dozenten</item>
        <item>Module</item>
    </string-array>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="modules">Module</string>
    <string name="quotations">Zitate</string>
    <string name="docents">Dozenten</string>
    <string name="title_activity_create_docent">CreateDocentActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="createQuotation">Zitat erstellen</string>
    <string name="createModule">Modul erstellen</string>
    <string name="createDocent">Zitat erstellen</string>
    <string name="editModule">Modul:</string>
    <string name="save">Speichern</string>
    <string name="discard">Verwerfen</string>
    <string name="editDocent">Name:</string>
    <string name="editDocentHint">Typ, der meist vorne steht</string>
    <string name="docent">Dozent:</string>
    <string name="addDocent">Dozent hinzufügen</string>
    <string name="editModuleHint">Gebe ein Modulnamen ein</string>
    <string name="addModule">Modul hinzufügen</string>
    <string name="quotation">Zitat:</string>
    <string name="quotationHint">Gebe ein Zitat ein</string>
    <string name="deleteDialogTitle">Löschen</string>
    <string name="deleteDialogMessage">Bist du sicher, dass du den ausgewählten Inhalt löschen willst?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="cannotDeleteDocent">Dozent kann nicht gelöscht werden! Dozent ist noch mit min. einem Moduel verknüpft!</string>
    <string name="cannotDeleteModule">Modul kann nicht gelöscht werden! Modul ist noch mit min. einem Zitat verknüpft!</string>
    <string name="cannotDeleteQuotation">Zitat kann aus irgendeinem Grund nicht gelöscht werden. Shit happens! Leb damit!</string>
    <string name="optionDialogTitle">Optionen</string>
    <string name="editDocentSubtitle">Dozent bearbeiten</string>
    <string name="editModuleSubtitle">Module bearbeiten</string>
    <string name="editQuotationSubtitle">Zitat bearbeiten</string>
</resources>
